# console3D

./: .gitmodules  CMakeLists.txt
include/: input.h  structures.h
src/: input.cpp  main.cpp  structures.cpp
